# lightning-whisper-mlx

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  setup.py
docs/plans/: 2026-02-26-dead-code-cleanup-and-feature-roadmap.md  2026-02-26-tts-and-tests-implementation.md  2026-02-26-tts-integration-and-test-redesign.md  2026-02-27-diarization-design.md  2026-02-27-diarization-implementation.md  2026-02-27-web-ui-design.md  2026-02-27-web-ui-implementation.md  2026-02-28-dialog-tts-design.md  2026-02-28-dialog-tts-implementation.md  2026-02-28-tts-web-ui.md
lightning_whisper_mlx/: __init__.py  correct.py  decoding.py  dialog.py  diarize.py  lightning.py  server.py  speakers.py  transcribe.py  tts.py
tests/: conftest.py  test_audio.py  test_correct.py  test_decoding.py  test_dialog.py  test_diarize.py  test_roundtrip.py  test_server.py  test_speakers.py  test_tokenizer.py
